Project bingo {
  database_type: 'PostgreSQL'
  Note: '''
    Dozingo
  '''
}

//// ============================================
//// IDENTITY & AUTH
//// ============================================

TablePartial timestamps {
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  username text [unique, not null]
  email text [unique, not null]
  email_verified_at timestamptz [note: 'null means unverified or no email']
  avatar_key text [not null, default: 'default.svg']
  ~timestamps
}

Table user_passwords {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  password_hash text [not null]
  ~timestamps
}

Ref: user_passwords.user_id - users.id [delete: cascade]

Table user_authentications {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  provider text [not null]
  provider_user_id text [not null]
  ~timestamps

  indexes {
    (provider, provider_user_id) [unique]
  }
}

Ref: user_authentications.user_id > users.id [delete: cascade]

Table user_two_factors {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, unique]
  totp_secret text [not null]
  totp_verified_at timestamptz [null]
  ~timestamps
}

Ref: user_two_factors.user_id - users.id [delete: cascade]

Table recovery_codes {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  code_hash text [not null]
  used_at timestamptz [null]
  ~timestamps

  indexes {
    user_id
  }
}

Ref: recovery_codes.user_id > users.id [delete: cascade]

Table sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [note: 'null for anonymous sessions']
  token text [unique, not null, note: 'SHA-256 hex digest; plaintext lives only in the session_token cookie']
  two_fa_pending boolean [not null, default: false, note: 'true = awaiting 2FA verification']
  expires_at timestamptz [not null]
  ~timestamps

  indexes {
      expires_at
  }
}

Ref: sessions.user_id > users.id [delete: cascade]

enum token_type {
    "password_reset"
    "email_verification"
}

Table verification_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  token text [unique, not null, note: 'SHA-256 hex digest; plaintext lives only in the email link']
  type token_type [not null]
  email text [null, note: 'the email address this token is intended to verify']
  expires_at timestamptz [not null]
  ~timestamps

  indexes {
      expires_at
      (user_id, type)
  }
}

Ref: verification_tokens.user_id > users.id [delete: cascade]

//// ============================================
//// BOARDS & CELLS
//// ============================================

Table boards {
  id uuid [pk, default: `gen_random_uuid()`]
  title text [not null]
  description text
  size integer [not null, default: 5, note: 'size=5 means a 5x5 board']
  author_id uuid [note: 'null when author was deleted']
  ~timestamps

  indexes {
    title [type: gin, note: 'GIN trgm index for full-text title search']
  }
  checks {
    `size >= 4 AND size <= 6`
  }
}

Ref: boards.author_id > users.id [delete: set null]

Table cells {
  id uuid [pk, default: `gen_random_uuid()`]
  board_id uuid [not null]
  content text [not null]
  value integer [not null]
  author_id uuid [note: 'null = canonical cell, set = personal cell']
  ~timestamps
}

Ref: cells.board_id > boards.id [delete: cascade]
Ref: cells.author_id > users.id [delete: set null]

//// ============================================
//// VOTES
//// ============================================

Table votes {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null]
  board_id uuid [not null]
  vote_value integer [not null]
  ~timestamps

  indexes {
    (user_id, board_id) [unique]
  }
  checks {
    `vote_value IN (1, -1)`
  }
}

Ref: votes.user_id > users.id [delete: cascade]
Ref: votes.board_id > boards.id [delete: cascade]

//// ============================================
//// GAMES
//// ============================================

enum game_status {
  "active"
  "abandoned"
}

Table games {
  id uuid [pk, default: `gen_random_uuid()`]
  player_id uuid [note: 'null for anonymous players; set on login/signup']
  session_id uuid [note: 'null when session expired']
  board_id uuid [note: 'null if board was deleted']
  status game_status [not null, default: 'active']
  bingo_count integer [not null, default: 0]
  ~timestamps
  
  indexes {
    board_id
    player_id
  }
  checks {
    `status IN ('active', 'abandoned')`
    `bingo_count >= 0`
  }
}

Ref: games.player_id > users.id [delete: set null]
Ref: games.session_id > sessions.id [delete: set null]
Ref: games.board_id > boards.id [delete: set null]

Table game_cells {
  id uuid [pk, default: `gen_random_uuid()`]
  game_id uuid [not null]
  cell_id uuid [note: 'null if source cell was deleted']
  content text [not null, note: 'snapshot at game creation']
  position integer [not null]
  is_marked boolean [not null, default: false]
  ~timestamps

  indexes {
    (game_id, position) [unique]
  }
}

Ref: game_cells.game_id > games.id [delete: cascade]
Ref: game_cells.cell_id > cells.id [delete: set null]

Table game_sessions {
  id uuid [pk, default: `gen_random_uuid()`]
  game_id uuid [not null]
  started_at timestamptz [not null, default: `now()`]
  ended_at timestamptz [note: 'null while the session is still active']
  last_heartbeat_at timestamptz [not null, default: `now()`, note: 'updated by client heartbeat pings']
  ~timestamps

  indexes {
    game_id
    last_heartbeat_at [note: 'partial index WHERE ended_at IS NULL; used by stale-session cleanup worker']
    `COALESCE(ended_at, last_heartbeat_at)` [note: 'expression index for time-windowed playtime aggregation']
  }
}

Ref: game_sessions.game_id > games.id [delete: cascade]
